Add: All components necessary for the oven GUI menu system were added, which persists data by storing it in YAML files.